--- a/src/app/preview-test/preview-test.component.html
+++ b/src/app/preview-test/preview-test.component.html
@@ -1,3 +1,43 @@
-<p>
-  preview-test works!
-</p>
+<div class="container">
+  <div class="headerbar">
+    <span>Test Desk</span>
+  </div>
+  <div class="boom">
+    <h1>Preview</h1> 
+  </div>
+</div>
+<div class="container">
+    <div class="boom">
+      <div class="ui-g12 ui-g-nopad">
+        <h2>1. Choose the world's Largest Mammal</h2>
+        <div class="answer">{{one}}</div>
+      </div>   
+   </div>
+
+
+</div>
+
+<div class="container">
+  <div class="boom">
+    <div class="ui-g12 ui-g-nopad">
+      <h2>2. Select all the sugar substances that are listed below</h2>
+      <div class="answer">{{two}}</div>
+     </div>   
+ </div>
+</div>
+
+<div class="container">
+  <div class="boom">
+    <div class="ui-g12 ui-g-nopad">
+      <h2>3. Write a Short note on Big Bang Theory </h2>
+      <div class="answer">{{three}}</div>
+
+    </div>   
+ </div>
+</div>
+
+<div class="container">
+  <div class="boom1">
+    <button mat-raised-button color="primary" (click)="submit()">Edit</button>
+    </div>   
+ </div>
