--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -2,6 +2,7 @@
   <div class="headerbar">
     <span>Test Desk</span>
   </div>
+  <!-- <p-toast [(value)]="qerrorMsg" *ngIf="qerrorMsgDisplay"></p-toast>   -->
   <div class="boom">
     <!-- <h1>Hello {{username}}</h1> <h2>Welcom</h2> -->
     <h1>Instructions</h1> 
