--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
     width: 100%;
     height: 50px;
     border-radius: 25px;
-    background-color: turquoise;
+    background-color: #ff0303;
     outline: none;
     border: 0px;
     cursor: pointer;
@@ -35,7 +35,7 @@ body {
   .form-btn-hollow {
     font-family: Poppins-Medium;
     font-size: 15px;
-    color: turquoise;
+    color: #ff0303;
     line-height: 1.2;
     text-transform: uppercase;
     background-color:transparent;
