--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -18,10 +18,10 @@
     <div class="boom">
       <div class="ui-g12 ui-g-nopad">
         <h2>1. Choose the world's Largest Mammal</h2>
-        <div ><p-radioButton name="group1" value="Lion" label="Lion" [(ngModel)]="val1" inputId="opt1"></p-radioButton></div>
-        <div ><p-radioButton name="group1" value="Dinosour" label="Dinosour" [(ngModel)]="val1" inputId="opt2"></p-radioButton></div>
-        <div ><p-radioButton name="group1" value="Girafee" label="Girafee" [(ngModel)]="val1" inputId="opt3"></p-radioButton></div>     
-        <div ><p-radioButton name="group1" value="Blue Whale" label="Blue Whale" [(ngModel)]="val1" inputId="opt3"></p-radioButton></div>
+        <div ><p-radioButton class="prd" name="group1" value="Lion" label="Lion" [(ngModel)]="val1" inputId="opt1"></p-radioButton></div>
+        <div ><p-radioButton class="prd" name="group1" value="Dinosour" label="Dinosour" [(ngModel)]="val1" inputId="opt2"></p-radioButton></div>
+        <div ><p-radioButton class="prd" name="group1" value="Girafee" label="Girafee" [(ngModel)]="val1" inputId="opt3"></p-radioButton></div>     
+        <div ><p-radioButton class="prd" name="group1" value="Blue Whale" label="Blue Whale" [(ngModel)]="val1" inputId="opt3"></p-radioButton></div>
     </div>   
    </div>
 
@@ -32,10 +32,10 @@
   <div class="boom">
     <div class="ui-g12 ui-g-nopad">
       <h2>2. Select all the sugar substances that are listed below</h2>
-      <div ><p-checkbox name="group1" value="Gluctose" label="Gluctose" [(ngModel)]="cval1" inputId="c1"></p-checkbox></div>
-      <div ><p-checkbox name="group1" value="Sucrose" label="Sucrose" [(ngModel)]="cval1" inputId="c2"></p-checkbox></div>
-      <div ><p-checkbox name="group1" value="Fructose" label="Fructose" [(ngModel)]="cval1" inputId="c3"></p-checkbox></div>     
-      <div ><p-checkbox name="group1" value="Maltose" label="Maltose" [(ngModel)]="cval1" inputId="c4"></p-checkbox></div>
+      <div ><p-checkbox class="prd" name="group1" value="Gluctose" label="Gluctose" [(ngModel)]="cval1" inputId="c1"></p-checkbox></div>
+      <div ><p-checkbox class="prd" name="group1" value="Sucrose" label="Sucrose" [(ngModel)]="cval1" inputId="c2"></p-checkbox></div>
+      <div ><p-checkbox class="prd" name="group1" value="Fructose" label="Fructose" [(ngModel)]="cval1" inputId="c3"></p-checkbox></div>     
+      <div ><p-checkbox class="prd" name="group1" value="Maltose" label="Maltose" [(ngModel)]="cval1" inputId="c4"></p-checkbox></div>
   </div>   
  </div>
 </div>
