--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -44,7 +44,7 @@
   <div class="boom">
     <div class="ui-g12 ui-g-nopad">
       <h2>3. Write a Short note on Big Bang Theory </h2>  Max 120 Words
-      <textarea [(ngModel)]="textVal" class="inp"></textarea>
+      <textarea [(ngModel)]="textVal" maxlength="120" class="inp"></textarea>
 
     </div>   
  </div>
